<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/ivory"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:layout_gravity="top"
        android:layout_marginTop="0dp"
        android:background="@color/royalblue"
        android:textColor="@color/white"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:textSize="30sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:layout_gravity="top"
        android:layout_marginTop="0dp"
        android:background="@color/royalblue"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"

        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_name"
            android:hint="@string/username_hint"
            android:gravity="center_horizontal"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:hint="@string/password_hint"
            android:gravity="center_horizontal"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_login"
            />
    </LinearLayout>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_right"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        />


</LinearLayout>
